output.txt
[1/9] Performing build step for 'bootloader'
[1/1] cd /home/zip/esp/ble_eddystone/build/bootloader/esp-idf/esptool_py && /home/zip/.espressif/python_env/idf5.0_py3.8_env/bin/python /home/zip/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/zip/esp/ble_eddystone/build/bootloader/bootloader.bin
Bootloader binary size 0x6350 bytes. 0xcb0 bytes (11%) free.
[2/7] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/esp_eddystone_demo.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/esp_eddystone_demo.c.obj 
/home/zip/.espressif/tools/xtensa-esp32-elf/esp-2021r2-8.4.0/xtensa-esp32-elf/bin/xtensa-esp32-elf-gcc -DHAVE_CONFIG_H -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DUNITY_INCLUDE_CONFIG_H -DWITH_POSIX -Iconfig -I../main -I/home/zip/esp/esp-idf/components/newlib/platform_include -I/home/zip/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/zip/esp/esp-idf/components/freertos/esp_additions/include/freertos -I/home/zip/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/zip/esp/esp-idf/components/freertos/esp_additions/include -I/home/zip/esp/esp-idf/components/esp_hw_support/include -I/home/zip/esp/esp-idf/components/esp_hw_support/include/soc -I/home/zip/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/zip/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/zip/esp/esp-idf/components/heap/include -I/home/zip/esp/esp-idf/components/log/include -I/home/zip/esp/esp-idf/components/lwip/include/apps -I/home/zip/esp/esp-idf/components/lwip/include/apps/sntp -I/home/zip/esp/esp-idf/components/lwip/lwip/src/include -I/home/zip/esp/esp-idf/components/lwip/port/esp32/include -I/home/zip/esp/esp-idf/components/lwip/port/esp32/include/arch -I/home/zip/esp/esp-idf/components/soc/include -I/home/zip/esp/esp-idf/components/soc/esp32/. -I/home/zip/esp/esp-idf/components/soc/esp32/include -I/home/zip/esp/esp-idf/components/hal/esp32/include -I/home/zip/esp/esp-idf/components/hal/include -I/home/zip/esp/esp-idf/components/hal/platform_port/include -I/home/zip/esp/esp-idf/components/esp_rom/include -I/home/zip/esp/esp-idf/components/esp_rom/include/esp32 -I/home/zip/esp/esp-idf/components/esp_rom/esp32 -I/home/zip/esp/esp-idf/components/esp_common/include -I/home/zip/esp/esp-idf/components/esp_system/include -I/home/zip/esp/esp-idf/components/esp_system/port/soc -I/home/zip/esp/esp-idf/components/esp_system/port/include/private -I/home/zip/esp/esp-idf/components/esp32/include -I/home/zip/esp/esp-idf/components/xtensa/include -I/home/zip/esp/esp-idf/components/xtensa/esp32/include -I/home/zip/esp/esp-idf/components/driver/include -I/home/zip/esp/esp-idf/components/driver/esp32/include -I/home/zip/esp/esp-idf/components/driver/deprecated -I/home/zip/esp/esp-idf/components/esp_pm/include -I/home/zip/esp/esp-idf/components/esp_ringbuf/include -I/home/zip/esp/esp-idf/components/efuse/include -I/home/zip/esp/esp-idf/components/efuse/esp32/include -I/home/zip/esp/esp-idf/components/vfs/include -I/home/zip/esp/esp-idf/components/esp_wifi/include -I/home/zip/esp/esp-idf/components/esp_event/include -I/home/zip/esp/esp-idf/components/esp_netif/include -I/home/zip/esp/esp-idf/components/esp_eth/include -I/home/zip/esp/esp-idf/components/tcpip_adapter/include -I/home/zip/esp/esp-idf/components/esp_phy/include -I/home/zip/esp/esp-idf/components/esp_phy/esp32/include -I/home/zip/esp/esp-idf/components/app_trace/include -I/home/zip/esp/esp-idf/components/esp_timer/include -I/home/zip/esp/esp-idf/components/mbedtls/port/include -I/home/zip/esp/esp-idf/components/mbedtls/mbedtls/include -I/home/zip/esp/esp-idf/components/mbedtls/esp_crt_bundle/include -I/home/zip/esp/esp-idf/components/app_update/include -I/home/zip/esp/esp-idf/components/spi_flash/include -I/home/zip/esp/esp-idf/components/bootloader_support/include -I/home/zip/esp/esp-idf/components/nvs_flash/include -I/home/zip/esp/esp-idf/components/pthread/include -I/home/zip/esp/esp-idf/components/esp_gdbstub/include -I/home/zip/esp/esp-idf/components/esp_gdbstub/xtensa -I/home/zip/esp/esp-idf/components/esp_gdbstub/esp32 -I/home/zip/esp/esp-idf/components/espcoredump/include -I/home/zip/esp/esp-idf/components/espcoredump/include/port/xtensa -I/home/zip/esp/esp-idf/components/wpa_supplicant/include -I/home/zip/esp/esp-idf/components/wpa_supplicant/port/include -I/home/zip/esp/esp-idf/components/wpa_supplicant/esp_supplicant/include -I/home/zip/esp/esp-idf/components/ieee802154/include -I/home/zip/esp/esp-idf/components/console -I/home/zip/esp/esp-idf/components/asio/asio/asio/include -I/home/zip/esp/esp-idf/components/asio/port/include -I/home/zip/esp/esp-idf/components/bt/common/osi/include -I/home/zip/esp/esp-idf/components/bt/include/esp32/include -I/home/zip/esp/esp-idf/components/bt/common/api/include/api -I/home/zip/esp/esp-idf/components/bt/common/btc/profile/esp/blufi/include -I/home/zip/esp/esp-idf/components/bt/common/btc/profile/esp/include -I/home/zip/esp/esp-idf/components/bt/host/bluedroid/api/include/api -I/home/zip/esp/esp-idf/components/unity/include -I/home/zip/esp/esp-idf/components/unity/unity/src -I/home/zip/esp/esp-idf/components/cmock/CMock/src -I/home/zip/esp/esp-idf/components/coap/port/include -I/home/zip/esp/esp-idf/components/coap/libcoap/include -I/home/zip/esp/esp-idf/components/nghttp/port/include -I/home/zip/esp/esp-idf/components/nghttp/nghttp2/lib/includes -I/home/zip/esp/esp-idf/components/esp-tls -I/home/zip/esp/esp-idf/components/esp-tls/esp-tls-crypto -I/home/zip/esp/esp-idf/components/esp_adc_cal/include -I/home/zip/esp/esp-idf/components/esp_hid/include -I/home/zip/esp/esp-idf/components/tcp_transport/include -I/home/zip/esp/esp-idf/components/esp_http_client/include -I/home/zip/esp/esp-idf/components/esp_http_server/include -I/home/zip/esp/esp-idf/components/esp_https_ota/include -I/home/zip/esp/esp-idf/components/esp_lcd/include -I/home/zip/esp/esp-idf/components/esp_lcd/interface -I/home/zip/esp/esp-idf/components/protobuf-c/protobuf-c -I/home/zip/esp/esp-idf/components/protocomm/include/common -I/home/zip/esp/esp-idf/components/protocomm/include/security -I/home/zip/esp/esp-idf/components/protocomm/include/transports -I/home/zip/esp/esp-idf/components/mdns/include -I/home/zip/esp/esp-idf/components/esp_local_ctrl/include -I/home/zip/esp/esp-idf/components/sdmmc/include -I/home/zip/esp/esp-idf/components/esp_serial_slave_link/include -I/home/zip/esp/esp-idf/components/esp_websocket_client/include -I/home/zip/esp/esp-idf/components/expat/expat/expat/lib -I/home/zip/esp/esp-idf/components/expat/port/include -I/home/zip/esp/esp-idf/components/wear_levelling/include -I/home/zip/esp/esp-idf/components/fatfs/diskio -I/home/zip/esp/esp-idf/components/fatfs/vfs -I/home/zip/esp/esp-idf/components/fatfs/src -I/home/zip/esp/esp-idf/components/freemodbus/common/include -I/home/zip/esp/esp-idf/components/idf_test/include -I/home/zip/esp/esp-idf/components/idf_test/include/esp32 -I/home/zip/esp/esp-idf/components/json/cJSON -I/home/zip/esp/esp-idf/components/mqtt/esp-mqtt/include -I/home/zip/esp/esp-idf/components/openssl/include -I/home/zip/esp/esp-idf/components/perfmon/include -I/home/zip/esp/esp-idf/components/spiffs/include -I/home/zip/esp/esp-idf/components/ulp/include -I/home/zip/esp/esp-idf/components/wifi_provisioning/include -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -ggdb -mlongcalls -Wno-frame-address -Og -fmacro-prefix-map=/home/zip/esp/ble_eddystone=. -fmacro-prefix-map=/home/zip/esp/esp-idf=/IDF -fstrict-volatile-bitfields -Wno-error=unused-but-set-variable -fno-jump-tables -fno-tree-switch-conversion -std=gnu99 -Wno-old-style-declaration -D_GNU_SOURCE -DIDF_VER=\"v5.0-dev-595-g98ad01e5fc\" -DESP_PLATFORM -D_POSIX_READER_WRITER_LOCKS -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/esp_eddystone_demo.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/esp_eddystone_demo.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/esp_eddystone_demo.c.obj   -c ../main/esp_eddystone_demo.c
../main/esp_eddystone_demo.c: In function 'esp_gap_cb':
../main/esp_eddystone_demo.c:107:34: error: 'ble_adv_params' undeclared (first use in this function); did you mean 'ble_scan_params'?
   esp_ble_gap_start_advertising(&ble_adv_params);
                                  ^~~~~~~~~~~~~~
                                  ble_scan_params
../main/esp_eddystone_demo.c:107:34: note: each undeclared identifier is reported only once for each function it appears in
ninja: build stopped: subcommand failed.
Executing action: all (aliases: build)
Running ninja in directory /home/zip/esp/ble_eddystone/build
Executing "ninja all"...
